--- a/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
+++ b/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
@@ -4,5 +4,11 @@ Architecture=
 TopLevelType=
 [file:.\src\pixelCircuitTB.sv]
 Enabled=1
-[file:.\src\re_control.v]
+[file:.\src\re_control.sv]
+Enabled=1
+[file:.\src\Timer_counter.sv]
+Enabled=1
+[file:.\src\FSM_control.sv]
+Enabled=1
+[file:.\src\CTRL_time.sv]
 Enabled=1
