--- a/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
+++ b/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
@@ -1,7 +1,7 @@
 [View]
-Entity=
+Entity=Time_counter_TB
 Architecture=
-TopLevelType=
+TopLevelType=3
 [file:.\src\pixelCircuitTB.sv]
 Enabled=1
 [file:.\src\re_control.sv]
