--- a/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
+++ b/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
@@ -1,9 +1,7 @@
 [View]
-Entity=Time_counter_TB
+Entity=re_control_TB
 Architecture=
 TopLevelType=3
-[file:.\src\pixelCircuitTB.sv]
-Enabled=1
 [file:.\src\re_control.sv]
 Enabled=1
 [file:.\src\Timer_counter.sv]
@@ -11,4 +9,10 @@ Enabled=1
 [file:.\src\FSM_control.sv]
 Enabled=1
 [file:.\src\CTRL_exp_time.sv]
+Enabled=1
+[file:.\src\DigitalCameraComp.sv]
+Enabled=1
+[file:.\src\DigitalCameraComp_testVectors.sv]
+Enabled=1
+[file:.\src\re_control_testVectors.txt]
 Enabled=1
