--- a/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
+++ b/Digital_part_of_camera_implementation/DigitalCamera/compile.cfg
@@ -1,5 +1,5 @@
 [View]
-Entity=re_control_TB
+Entity=FSM_control_TB
 Architecture=
 TopLevelType=3
 [file:.\src\re_control.sv]
@@ -15,4 +15,6 @@ Enabled=1
 [file:.\src\DigitalCameraComp_testVectors.sv]
 Enabled=1
 [file:.\src\re_control_testVectors.txt]
+Enabled=1
+[file:.\src\FSM_control_testVectors.txt]
 Enabled=1
